2008-10-09  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.

2008-09-13  Jörgen Scheibengruber  <mfcn@gmx.de>

	* src/gui.c (main):
	* src/prefs.c (add_button_clicked_cb), (del_button_clicked_cb),
	(name_cell_edited_cb):
	Don't update menus while main-view and tray-icon are not visible yet

2008-09-13  Jörgen Scheibengruber  <mfcn@gmx.de>

	* configure.in:
	* src/Makefile.am:

	Version 1.8

2008-09-13  Jörgen Scheibengruber  <mfcn@gmx.de>

	* src/Makefile.am:
	* src/eggtrayicon.c:
	* src/eggtrayicon.h:
	* src/gui.c (adj_value_changed_cb):
	* src/trayicon.c (tray_activate_cb), (tray_popup_menu),
	(create_tray_icon):
	* src/trayicon.h:
	Apply patch by Daniel Garcia to use GtkStatusIcon instead of egg-tray-icon (#417240)

2008-05-31  Petr Kovar  <pknbe@volny.cz>

	* configure.in: Added mk and ms to ALL_LINGUAS.

2008-04-17  Claude Paroz  <claude@2xlibre.net>

	* help/Makefile.am: Added fr to DOC_LINUGAS.
	* help/fr/figures/*.png:
	* help/fr/fr.po: Added French translation.

2008-04-13  Jörgen Scheibengruber  <mfcn@gmx.de>

	* data/gnomeradio.schemas.in:
	* src/Makefile.am:
	* src/gui.c (initial_frequency_scan_cb), (initial_frequency_scan),
	(start_radio), (redraw_status_window), (adj_value_changed_cb):
	* src/gui.h:
	* src/prefs.c (save_settings), (load_settings):
	* src/radio.c (radio_init), (radio_is_init), (radio_stop),
	(radio_set_freq), (radio_unmute), (radio_mute), (radio_get_stereo),
	(radio_get_signal), (radio_check_station):
	* src/radio.h:
	* src/tech.c (mixer_get_volume):
	* src/tech.h:
	* src/v4l1.c (v4l1_radio_init), (v4l1_radio_is_init),
	(v4l1_radio_set_freq), (v4l1_radio_mute), (v4l1_radio_get_stereo),
	(v4l1_radio_get_signal), (v4l1_radio_finalize),
	(v4l1_radio_dev_new):
	* src/v4l1.h:
	* src/v4l2.c (v4l2_radio_init), (v4l2_radio_is_init),
	(v4l2_radio_set_freq), (v4l2_radio_mute), (v4l2_radio_get_stereo),
	(v4l2_radio_get_signal), (v4l2_radio_finalize),
	(v4l2_radio_dev_new):
	* src/v4l2.h: